crates/vexor-compiler/tests/golden/error/input/if_missing_else.vx
val r = 100
val c = Circle(r)
// missing else
val result = if r > 50 { c }
export result
